--- a/index.html
+++ b/index.html
@@ -567,6 +567,9 @@
         <div class="video-container fade-in">
             <iframe src="https://www.youtube.com/embed/6LnicO3YNnE" allowfullscreen></iframe>
         </div>
+        <div class="video-container fade-in">
+            <iframe src="https://www.youtube.com/embed/OHo47AT4Zvs" allowfullscreen></iframe>
+        </div>
     </section>
     
     <!-- New Download Section -->
