--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
     <section class="section video-section" id="demo">
         <h2 class="section-title fade-in">See It In Action</h2>
         <div class="video-container fade-in">
-            <iframe src="https://www.youtube.com/embed/6LnicO3YNnE" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/1OOJyex5co8" allowfullscreen></iframe>
         </div>
         <div class="video-container fade-in">
             <iframe src="https://www.youtube.com/embed/OHo47AT4Zvs" allowfullscreen></iframe>
